--- a/app/public/queryInterface.html
+++ b/app/public/queryInterface.html
@@ -5,7 +5,7 @@
     <head>
         <title>Query the social web</title>
         <link rel='stylesheet' type="text/css" href='/stylesheets/style.css' />
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_t3_wvQ1AxaFSDjZMifE7kVaPIvHEhSA"></script>-->
         <script src="/javascripts/javascripts.js" type = "text/javascript"></script>
     </head>
@@ -162,15 +162,6 @@
                           </label>    
                         </section>
                 </form>
-            </div>
-            <div class="map-wrapper">
-                <div id="map-canvas" style="width: 100%; height: 332px;"></div>
-            </div>
-            <div class="bottom">
-                <h2>Tweets:</h2>
-            </div>
-            <div class="bottom2">
-                <h2>Tweets: Most common words in the collection and most active users</h2>
             </div>
         </div>
     </body>
