started sql searching

--- a/app/public/queryInterface.html
+++ b/app/public/queryInterface.html
@@ -75,6 +75,12 @@
                             <span>Count:</span>
                             <input id="count" name="count" type="number" placeholder="Example: 50" min="1" max="100"/>
                         </label> 
+
+                        <label>
+                            <span>Search from database only:
+                                <input id="dbonly" name="dbonly" type="checkbox" />
+                            </span>
+                        </label>
                         
                         <section class="twitterform">
                           <label>
