The data is now being displayed in the html

--- a/app/public/queryInterface.html
+++ b/app/public/queryInterface.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
-<!-- browser key - AIzaSyBhdAk0Ki3azlEwLYPnBIDFyGWoFxH4Zb0 -->
-<!-- server key - AIzaSyB_t3_wvQ1AxaFSDjZMifE7kVaPIvHEhSA -->
 <html class="home" lang="en">
     <head>
         <title>Query the social web</title>
         <link rel='stylesheet' type="text/css" href='/stylesheets/style.css' />
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB_t3_wvQ1AxaFSDjZMifE7kVaPIvHEhSA"></script>-->
         <script src="/javascripts/javascripts.js" type = "text/javascript"></script>
     </head>
     <body onLoad="doSlideshow()">
@@ -58,7 +55,7 @@
 
                         <label>
                             <span>Keywords:</span>
-                            <input id="keywords" name="keywords" type="text" placeholder="Example: Picadilly Stadium" />
+                            <input id="keywords" name="keywords" type="text" placeholder="Example: Goal" />
                         </label>
 
                         <label>
