commit for issues encountered

--- a/app/public/queryInterface.html
+++ b/app/public/queryInterface.html
@@ -78,6 +78,12 @@
                                 <input id="dbonly" name="dbonly" type="checkbox" />
                             </span>
                         </label>
+
+                        <label>
+                            <span>Search for teams players:
+                                <input id="playersonly" name="playersonly" type="checkbox" />
+                            </span>
+                        </label>
                         
                         <section class="twitterform">
                           <label>
@@ -86,8 +92,6 @@
                           </label>    
                         </section>
                     </form>
-                <div id='myform_errorloc' class='error_strings'></div>
-                <div id="result"></div>
             </div>
             <div class="right-wrapper">
                 <form name="sparqlquery" id="query" method="POST" action="/sparql" class="form" accept-charset="utf-8"> 
